public/sources/attributes/color/css/styles.less
.vcv-ui-form-dropdown {
  cursor: pointer;
}

.vcv-ui-form-dropdown-color--value {
  border-radius: 3px;
  height: 100%;
  box-shadow: rgba(0, 0, 0, .1) 1px 1px 1px, rgba(0,0,0,.1) -1px -1px 1px;
}

.vcv-ui-form-dropdown-color--swatch {
  width: 16px;
  height: 16px;
  margin: 2px 0 3px;
}

.vcv-ui-form-dropdown-color--popover {
  position: relative;
  z-index: 2;
  margin-top: 4px;
}

